# EasyConnect

./: CMakeLists.txt  EasyConnect.sln  README.md
Common/: AES.cpp  AES.h  CMakeLists.txt  CryptoConfig.h  DiscoveryCommon.h  NetUtils.cpp  NetUtils.h
EasyConnect Client/: CMakeLists.txt  ClientTCP.cpp  ClientTCP.h  EasyConnect Client.vcxproj  EasyConnect Client.vcxproj.filters  ServerDiscovery.cpp  ServerDiscovery.h  main.cpp
EasyConnect Server/: CMakeLists.txt  ClientDiscovery.cpp  ClientDiscovery.h  EasyConnect Server.vcxproj  EasyConnect Server.vcxproj.filters  ServerTCP.cpp  ServerTCP.h  main.cpp
